Bug 382139 - Sidebar tab button text unreadable on hover and when current tab is not focused
Summary: Sidebar tab button text unreadable on hover and when current tab is not focused
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-08 23:23 UTC by Ryan Aird
Modified: 2017-09-22 15:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
okular hover effect (43.71 KB, image/png)
2017-07-08 23:23 UTC, Ryan Aird
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Aird 2017-07-08 23:23:54 UTC
Created attachment 106512 [details]
okular hover effect

It is very difficult to read the white text and on light blue background that you get when hovering over a button such as thumbnails in the sidebar with the default plasma 5 breeze theme. The button text should only turn from black to white when the button is in the focused state and therefore has a deep blue background. In any other state, the button text should remain black. See the attached photo to get a better understanding of the issue. Occurs on 1.1.2
Comment 1 Nate Graham 2017-09-13 02:57:44 UTC
I agree. White text on a light background is a usability issue.
Comment 2 Nate Graham 2017-09-13 04:05:00 UTC
It appears that Okular is using the wrong color from the active color theme here. It is using Selection Text for tab items that you are hovering over, when it should be using View Text (which is what most programs use for items that you are hovering over).

The problem is only noticeable with the Breeze color scheme, since it is a light theme that uses a light color for Selection Text; most light themes use a dark color for this, and most dark themes have a dark background to contrast against a light color here.
Comment 3 Nate Graham 2017-09-13 04:42:42 UTC
Submitted a patch that fixes this: https://phabricator.kde.org/D7793
Comment 4 Nate Graham 2017-09-22 15:38:59 UTC
Git commit e80972e18909ed4f061323d1e5c4d2c8883c4943 by Nathaniel Graham.
Committed on 22/09/2017 at 15:38.
Pushed by ngraham into branch 'Applications/17.08'.

Fix sidebar labels being unreadable when selected or hovered over

Summary:

Previously these labels were white-on-light-blue with light themes; now they use the correct theme color property, and become black appropriately.

Test Plan:
Tested on KDE Neon (dev unstable). Verified that with the default Breeze color scheme, tab text is more readable when hovered over and then active but not in focus. See before and after:

{F3909142}

{F3909143}

Also tested these changes with all standard color schemes as well as the Oxygen theme to make sure that there were no visual regressions.

Reviewers: aacid, #okular, #kde_applications, broulik, sander, rkflx

Reviewed By: aacid, #okular, #kde_applications, rkflx

Subscribers: rkflx

Tags: #okular

Differential Revision: https://phabricator.kde.org/D7793

M  +7    -2    ui/sidebar.cpp

https://commits.kde.org/okular/e80972e18909ed4f061323d1e5c4d2c8883c4943