Fix sidebar labels being unreadable when selected or hovered over

Summary:
BUG: 382139

Previously these labels were white-on-light-blue with light themes; now they use the correct theme color property, and become black appropriately.

Test Plan:
Tested on KDE Neon (dev unstable). Verified that with the default Breeze color scheme, tab text is more readable when hovered over and then active but not in focus. See before and after:

{F3909142}

{F3909143}

Also tested these changes with all standard color schemes as well as the Oxygen theme to make sure that there were no visual regressions.

Reviewers: aacid, #okular, #kde_applications, broulik, sander, rkflx

Reviewed By: aacid, #okular, #kde_applications, rkflx

Subscribers: rkflx

Tags: #okular

Differential Revision: https://phabricator.kde.org/D7793